change total flakey

--- a/callJava.html
+++ b/callJava.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <title>My Web Page</title>
 <script>
+	document.write('<p>Hello world!</p>');
 	function classImport() {
-	  var location = new java.net.URL('file:/usr/local/google/home/clyu/istio-flakey-test/foo/');
+	  var location = new java.net.URL('file:foo/');
 	  var urlArray = java.lang.reflect.Array.newInstance(java.net.URL, 1);
 	  urlArray[0] = location;
 	  var classLoader = new java.net.URLClassLoader(urlArray);
@@ -13,6 +14,7 @@
 	}
 
 	var myClass = classImport();
+	document.write('<p>Hello world!</p>');
 
 	for(var i=0; i<10; i++) {
 	  myClass.getConstructor(null).newInstance(null).say();
