--- a/callJava.html
+++ b/callJava.html
@@ -1,7 +1,22 @@
-
-<!DOCTYPE html>
 <html>
-<applet code = FlakeyApplet.class>
-</applet>
+  <head>
+    <title>Your Title Here</title>
+  </head>
+  <body>
+    <script>
+    	function redirect(elem){
+		    elem.setAttribute("action","response.jsp");
+		    elem.submit();
+		}
+		function doSomething() {
+		    alert('Form submitted!');
+		    return false;
+		}
+	</script>
 
+	<form onsubmit="return doSomething();" class="my-form">
+	    <input type="submit" value="Submit">
+	</form>
+
+  </body>
 </html>
